--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<groupId>com.github.hiwepy</groupId>
 	<artifactId>dingtalk-spring-boot-starter</artifactId>
 	<description>Spring Boot Starter For DingTalk Client </description>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0.RELEASE</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/hiwepy/${project.artifactId}</url>
 	<packaging>jar</packaging>
@@ -355,7 +355,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<guava.version>30.0-jre</guava.version>
 		<dingtalk-sdk.version>2.0.0</dingtalk-sdk.version>
 		<maven.version>3.0</maven.version>
        	<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
@@ -365,19 +364,6 @@
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
 	</properties>
-
-	<dependencyManagement>
-		<dependencies>
-
-			<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-			<dependency>
-			    <groupId>com.google.guava</groupId>
-			    <artifactId>guava</artifactId>
-			    <version>${guava.version}</version>
-			</dependency>
-
-		</dependencies>
-	</dependencyManagement>
 
 	<dependencies>
 
@@ -443,12 +429,6 @@
 	 	<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
   			<artifactId>jackson-databind</artifactId>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-		<dependency>
-		    <groupId>com.google.guava</groupId>
-		    <artifactId>guava</artifactId>
 		</dependency>
 
 		<!--钉钉SDK : https://open-doc.dingtalk.com/microapp/faquestions/vzbp02 -->
